--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
+        >. Coded by <a href="#">ccbdp</a>.
       </div>
     </footer>
   </body>
